# pixelify

./: .gitignore  Cargo.toml  README.md
examples/: default.rs
src/: algorhytm.rs  cli.rs  lib.rs
